--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <circle class="sparkle" fill="url(#dotGrad)" cx="0" cy="0" r="50" />
         <g class="messageText" opacity="0">
           <text class="merryTextBg" x="50%" y="622">🎄 MERRY CHRISTMAS!</text>
-          <text class="fromChrisText" x="50%" y="670">Dish宝🦋</text>
+          <text class="fromChrisText" x="50%" y="670"> Dish 🦋</text>
         </g>
       </g>
     </svg>
