--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     </style>
   </head>
   <body>
+    <audio id="bgmusci" preload="load" loop="loop"><source src="main.mp3" type="audio/mpeg" /></audio>
     <svg
       class="mainSVG"
       xmlns="http://www.w3.org/2000/svg"
