--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
     </style>
   </head>
   <body>
-    <audio id="bgmusci" preload="load" loop="loop"><source src="main.mp3" type="audio/mpeg" /></audio>
+        <audio autoplay loop>
+        <source src="./main.mp3" type="audio/mp3">
+        
+    </audio>
     <svg
       class="mainSVG"
       xmlns="http://www.w3.org/2000/svg"
