--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
     <script src="./DrawSVGPlugin.js"></script>
     <script src="./Physics2DPlugin.min.js"></script>
     <script src="./ScrubGSAPTimeline.js"></script>
+    <script src="./Gruntfile.js"></script>
 
     <script>
       MorphSVGPlugin.convertToPath("polygon");
