--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🎄圣诞节</title>
+    <title>🎄Dish宝圣诞节快乐！</title>
     <style>
       @font-face {
         font-family: "mountains_of_christmasregular";
